--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -25,13 +25,13 @@
         </div>
       </div>
       <br>
-      <ng-container>
-        <ng-container>
+      <ng-container *ngIf = "(appState$ | async) as appState" [ngSwitch]="appState.dataState" >
+        <ng-container *ngSwitchCase="DataState.LOADING_STATE">
           <div class="col-md-12 single-note-item text-center">
             <div class="spinner-border text-info" role="status"></div>
           </div>
         </ng-container>
-        <ng-container>
+        <ng-container *ngSwitchCase="DataState.LOADED_STATE">
           <table class="table table-striped table-hover" id="servers">
             <thead>
             <tr>
@@ -45,13 +45,18 @@
               <th>Actions</th>
             </tr>
             </thead>
-            <tbody>
+            <tbody *ngFor="let server of appState.appData.data.servers; let i = index">
             <tr>
-              <td><img width="40" height="40"></td>
-              <td></td>
+              <td><img [src]="server.imageUrl" [alt] = "server.name" width="40" height="40"></td>
+              <td>{{server.ipAddress}} </td>
+              <td>{{server.name}}  </td>
+              <td>{{server.memory}}  </td>
+              <td>{{server.type}} </td>
+              <td>{{server.ipAddress}} </td>
               <td>
-                                  <span class="badge">
-                                  </span>
+                <span class="badge" [ngClass]="[server.status === Status.SERVER_UP ? ' badge-success' : 'badge-danger']" >
+                  {{ server.status === Status.SERVER_UP ? 'SERVER UP' : 'SERVER DOWN' }}
+                </span>
               </td>
               <td>
                 <a style="cursor: pointer;">
@@ -67,8 +72,9 @@
             </tbody>
           </table>
         </ng-container>
-        <ng-container>
+        <ng-container *ngSwitchCase="DataState.ERROR_STATE">
           <div class="alert-danger">
+            error
           </div>
         </ng-container>
       </ng-container>
