Implement the 'PingServer' function

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -59,9 +59,11 @@
                 </span>
               </td>
               <td>
-                <a style="cursor: pointer;">
-                  <i class="material-icons" title="Ping server">&#xe328;</i>
-                  <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+                <a (click)="pingServer(server.ipAddress)" style="cursor: pointer;">
+                  <i *ngIf="(filterStatus$ | async) === '' || (filterStatus$ | async) !== server.ipAddress"
+                    class="material-icons" title="Ping server">&#xe328;</i>
+                  <i *ngIf="(filterStatus$ | async) === server.ipAddress"
+                    class="fa fa-spinner fa-spin" style="font-size:24px"></i>
                 </a>
               </td>
               <td>
@@ -74,7 +76,7 @@
         </ng-container>
         <ng-container *ngSwitchCase="DataState.ERROR_STATE">
           <div class="alert-danger">
-            error
+            {{ appState.error }}
           </div>
         </ng-container>
       </ng-container>
