--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -67,9 +67,8 @@
                 </a>
               </td>
               <td>
-                <a class="delete" data-toggle="modal"
-                   style="cursor: pointer;"><i class="material-icons" data-toggle="tooltip"
-                                               title="Delete">&#xE872;</i></a>
+                <a (click)="deleteServer(server)" class="delete" data-toggle="modal"
+                   style="cursor: pointer;"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
               </td>
             </tbody>
           </table>
@@ -88,7 +87,7 @@
 <div id="addEmployeeModal" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content">
-      <form>
+      <form #serverForm="ngForm" (ngSubmit)="saveServer(serverForm)">
         <div class="modal-header">
           <h4 class="modal-title">Add Server</h4>
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -128,10 +127,10 @@
           <button type="button" class="btn btn-warning" id="closeModal" data-dismiss="modal">
             Cancel
           </button>
-          <button type="submit" class="btn btn-success">
-            <i class="fas fa-spinner fa-spin"></i>
-            <span>Saving...</span>
-            <span>Add</span>
+          <button type="submit" class="btn btn-success" [disabled]="serverForm.invalid || (isLoading$ | async)">
+            <i *ngIf="isLoading$ | async" class="fas fa-spinner fa-spin"></i>
+            <span *ngIf="isLoading$ | async" >Saving...</span>
+            <span *ngIf="!(isLoading$ | async)">Add</span>
           </button>
         </div>
       </form>
